<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorLighterGrey">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/shops_photo_image_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:src="@drawable/shops_photo"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shop_name"
        android:layout_alignBottom="@id/shops_photo_image_view"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        android:padding="@dimen/margin_12"
        android:textColor="@color/colorWhite"
        android:background="@color/colorTransparency"/>

    <TextView
        android:id="@+id/about_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:layout_below="@id/shops_photo_image_view"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_16"/>

    <LinearLayout
        android:id="@+id/location_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/about_text_view"
        android:layout_below="@+id/about_text_view"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin_8"
        android:gravity="top">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/address"/>

        <TextView
            android:id="@+id/shop_address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_address"
            android:textSize="@dimen/text_size"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/location_linear_layout"
        android:layout_alignStart="@id/about_text_view"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8">

        <ImageView
            android:id="@+id/contact_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/contact"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="@dimen/text_size"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/contact_linear_layout"
        android:layout_alignStart="@id/about_text_view"
        android:orientation="horizontal"
        android:gravity="top"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/time"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timing"
            android:textSize="@dimen/text_size"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"/>
    </LinearLayout>
    <TextView
        android:id="@+id/services_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/services"
        android:layout_below="@id/time_linear_layout"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_32"
        android:layout_marginLeft="@dimen/margin_32"
        android:layout_marginBottom="@dimen/margin_4"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/desc_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/services_text_view"
        android:text="@string/text"
        android:layout_alignStart="@id/time_linear_layout"
        android:textSize="@dimen/text_size"
        android:layout_marginEnd="@dimen/margin_32"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/services_includes"
        android:layout_below="@id/desc_text_view"
        android:textSize="@dimen/text_size"
        android:layout_alignStart="@id/time_linear_layout"
        android:layout_marginBottom="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_32"/>
    </RelativeLayout>
</ScrollView>